P-6: Fixed project buttons spacing

--- a/src/components/project/project-picture/ProjectPicture.scss
+++ b/src/components/project/project-picture/ProjectPicture.scss
@@ -14,6 +14,7 @@
     padding: $spacing-l;
     box-sizing: border-box;
     @include tile;
+    margin-top: $spacing-xl;
   }
 
   .image-change-buttons {
