--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -8,7 +10,7 @@ body {
   position: relative;
   overflow-x: hidden;
   overflow-y: auto;
-  background: rgb(240, 124, 77);
+  background: rgb(25, 25, 37);
   background: radial-gradient(circle, rgb(25, 25, 37) 0%, rgb(23, 16, 39) 100%);
   background-size: 100% 200%;
   height: 100vh;
